<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text_id"
        android:layout_width="40dip"
        android:layout_height="80dip"
        android:background="#AAAAAA"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:textColor="#000000"
        android:textSize="20dip"
        android:textStyle="bold"
        android:typeface="sans" 
        android:text="@string/rank"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_toRightOf="@+id/text_id"
        android:src="@drawable/music" 
        android:background="#FFFFFF" 
        android:contentDescription="@string/image" android:scaleType="fitCenter"/>

	<TextView
	    android:id="@+id/text_song"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/imageView1"
	    android:layout_toRightOf="@+id/imageView1"
	    android:text="@string/song_title"
        android:textColor="#000000"
	    android:textSize="20dip"
	    android:textStyle="bold"
	    android:paddingLeft="10dip"
	    android:typeface="sans" android:paddingTop="5dip"/>
	
	<TextView
	    android:id="@+id/text_artist"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/text_song"
	    android:layout_toRightOf="@+id/imageView1"
	    android:text="@string/artist_name"
        android:textColor="#888888"
	    android:textSize="13dip"
	    android:paddingLeft="10dip"
	    android:typeface="sans"/>


</RelativeLayout>