<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="#f1f1f2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" android:layout_gravity="center_horizontal" android:textColor="#000000" android:textStyle="bold" android:typeface="sans" android:textSize="45dip" android:paddingTop="10dip" android:paddingBottom="10dip"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:orientation="vertical" android:layout_weight="0.5" android:paddingLeft="10dip" android:paddingBottom="10dip" android:paddingRight="4dip">

            <Button
                android:id="@+id/button_hot_100"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:text="@string/hot_100"
                android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#000000" android:typeface="sans" android:textStyle="bold" android:textSize="26dip" android:gravity="center" android:background="@drawable/list_selector" android:layout_weight="0" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0"/>

            <Button
                android:id="@+id/button_hip_hop"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/r_b_hip_hop_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_alternative"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/alternative_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_dance_club"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/dance_club_play_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_ringtones"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/ringtones"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingRight="10dip" android:paddingLeft="4dip">

            <Button
                android:id="@+id/button_radio"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_weight="0"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/radio_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_latin"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_weight="0"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/latin_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_pop"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_weight="0"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/pop_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_rock"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_weight="0"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/rock_songs"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="8dip"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button_youtube"
                android:layout_width="fill_parent"
                android:layout_height="70dip"
                android:layout_weight="0"
                android:background="@drawable/list_selector"
                android:gravity="center"
                android:text="@string/youtube"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="26dip"
                android:textStyle="bold"
                android:typeface="sans" android:maxLines="2" android:minLines="2"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>